--- a/FaceFusion_Colab.ipynb
+++ b/FaceFusion_Colab.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
+      "gpuType": "L4",
+      "machine_shape": "hm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,12 +30,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "qMbQ-URbzB0g"
+        "id": "qMbQ-URbzB0g",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 109
+        },
+        "outputId": "73b1ba6d-d05d-4eac-e42c-03b3c03cfe21"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "IndentationError",
+          "evalue": "unexpected indent (<ipython-input-1-aa102c412bdc>, line 11)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-aa102c412bdc>\"\u001b[0;36m, line \u001b[0;32m11\u001b[0m\n\u001b[0;31m    torchdiffeq\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+          ]
+        }
+      ],
       "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
         "%cd /content\n",
         "!git clone https://github.com/cruiserein22/facefusion-unlocked.git\n",
         "%cd /content/facefusion-unlocked\n",
@@ -43,7 +60,6 @@
         "!pip uninstall -y torch torchaudio torchvision\n",
         "!rm -rf /usr/local/lib/python3.10/dist-packages/torch*\n",
         "!pip install torchdiffeq torch torchaudio torchvision\n",
-        " torchdiffeq\n",
         "import torch\n",
         "import torchaudio\n",
         "import torchvision\n",
@@ -53,19 +69,19 @@
     {
       "cell_type": "code",
       "source": [
-        "# Path to the core.py file\n",
-        "file_path = '/content/facefusion/facefusion/uis/layouts/default.py'\n",
-        "\n",
-        "# Read the content of the file\n",
-        "with open(file_path, 'r') as file:\n",
-        "    content = file.read()\n",
-        "\n",
-        "# Replace the line with the updated version\n",
-        "updated_content = content.replace(\"ui.launch(show_api = False)\", \"ui.launch(show_api = False, share=True, enable_queue=True)\")\n",
-        "\n",
-        "# Write the updated content back to the file\n",
-        "with open(file_path, 'w') as file:\n",
-        "    file.write(updated_content)\n"
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "wZO8t6KxYFPK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n"
       ],
       "metadata": {
         "id": "I6psOK4dAJrJ"
